[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["denisbrogg <denis.broggini@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
